Fixed whitespace

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -537,3 +537,7 @@ ul {
 .bullet{
     text-align: left;
 }
+
+.top-button{
+    color: white;
+}
